バグの修正

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <nav>
       <ul>
         <li>
-          <a href="https://shibawanko0202.github.io/typing/" id="now">∞type</a>
+          <a href="https://shibawanko0202.github.io/infinityTyping/" id="now">∞type</a>
         </li>
         <li>
-          <a href="">speed</a>
+          <a href="https://shibawanko0202.github.io/speedTyping/">speed</a>
         </li>
         <li>
           <a href="">accurate</a>
