正解率の追加

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <div id="title">
       <h1>typing!</h1>
-      <h2>&gt;∞type</h2>
+      <h2>&gt; ∞type</h2>
     </div>
     <nav>
       <ul>
@@ -42,7 +42,15 @@
       <div id="bad">0</div>
     </div>
     <div id="miss"></div>
+    <h3>accuracy rate</h3>
+    <div id="ar">
+      <div id="accuracy">0.00</div>
+      <p>%</p>
+    </div>
   </div>
+  <footer>
+    <small>(c)shibata</small>
+  </footer>
   <script src="js/main.js"></script>
 </body>
 </html>
