--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       <div>goodtype!</div>
       <div id="score">0</div>
     </div>
-    <span id="typed"></span>
-    <span id="untype"></span>
+    <p id="typed"></p>
+    <p id="untype"></p>
     <div id="time"></div>
     <div id="more"></div>
     <div id="misstype">
