--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="img/outline_keyboard.png">
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova&family=Monofett&display=swap" rel="stylesheet">
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-C5C57SBPJ8"></script>
-<script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-C5C57SBPJ8"></script>
+  <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-C5C57SBPJ8');
-</script>
+  </script>
 </head>
 <body>
   <header>
@@ -60,7 +63,7 @@
     </nav>
   </div>
   <div id="container">
-    <div id="sc">
+    <div id="goodtype">
       <div>goodtype!</div>
       <div id="score">0</div>
     </div>
@@ -79,7 +82,7 @@
     </div>
   </div>
   <footer>
-    <small>(c)shibata</small>
+    <small>c 2022 shibata</small>
   </footer>
   <script src="js/main.js"></script>
 </body>
