--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="img/outline_keyboard.png">
-  <!-- google fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova&family=Monofett&family=Xanh+Mono&display=swap" rel="stylesheet">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-C5C57SBPJ8"></script>
   <script>
@@ -62,23 +58,25 @@
       </ul>
     </nav>
   </div>
-  <div id="container">
-    <div id="goodtype">
-      <div>goodtype!</div>
-      <div id="score">0</div>
+  <main id="main">
+    <div id="container">
+      <div id="goodtype">
+        <div>goodtype!</div>
+        <div id="score">0</div>
+      </div>
+      <p id="typed"></p>
+      <p id="untype"></p>
+      <div id="misstype">
+        <div>misstype...</div>
+        <div id="bad">0</div>
+      </div>
+      <div id="miss"></div>
+      <div id="ar">
+        <div id="accuracy">0.00</div>
+        <p>%</p>
+      </div>
     </div>
-    <p id="typed"></p>
-    <p id="untype"></p>
-    <div id="misstype">
-      <div>misstype...</div>
-      <div id="bad">0</div>
-    </div>
-    <div id="miss"></div>
-    <div id="ar">
-      <div id="accuracy">0.00</div>
-      <p>%</p>
-    </div>
-  </div>
+  </main>
   <footer>
     <small>c 2022 shibata</small>
   </footer>
