単語の意味を表示する機能の実装

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
       </div>
       <p id="typed"></p>
       <p id="untype"></p>
+      <div id="more"></div>
       <div id="misstype">
         <div>misstype...</div>
         <div id="bad">0</div>
       </div>
-      <div id="miss"></div>
       <div id="ar">
         <div id="accuracy">0.00</div>
         <p>%</p>
@@ -80,6 +80,7 @@
   <footer>
     <small>c 2022 shibata</small>
   </footer>
+  <script src="js/questions.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
