--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
+<head prefix="og: http://ogp.me/ns#">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>typing(infinity)</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="img/outline_keyboard.png">
+  <link rel="icon" href="img/favicon.ico">
+
+  <!-- ↓↓ OGP ↓↓ -->
+    <meta property="og:title" content="typing!(infinity)">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="html/css/javascriptで頻出する単語を練習できるタイピングゲームです。">
+    <meta property="og:url" content="https://shibawanko0202.github.io/infinityTyping/">
+    <meta property="og:site_name" content="typing!(infinity)">
+    <meta property="og:image" content="https://shibawanko0202.github.io/infinityTyping/img/OGP(typing!).jpg">
+  <!-- ↑↑ OGP ↑↑ -->
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-C5C57SBPJ8"></script>
   <script>
